--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "homepage": "https://vitaliykhmil.github.io/goit-react-hw-08-phonebook/",
   "dependencies": {
+    "@emotion/react": "^11.10.4",
+    "@emotion/styled": "^11.10.4",
     "@reduxjs/toolkit": "^1.8.5",
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
@@ -21,6 +23,7 @@
     "react-toastify": "^9.0.8",
     "redux-persist": "^6.0.0",
     "styled-components": "^5.3.5",
+    "styled-system": "^5.1.5",
     "web-vitals": "^2.1.3",
     "yup": "^0.32.11"
   },
